# pokemon-web-scraper

./: .gitignore  pyproject.toml  requirements.txt  scraper.py
