[tool.poetry]
name = "pokemon-web-scraper"
version = "0.1.0"
description = ""
authors = ["Davide Andreossi <davide.andreossi@abatechsolutions.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astroid = "2.2.5"
beautifulsoup4 = "4.12.2"
bs4 = "0.0.1"
certifi = "2023.7.22"
chardet = "3.0.4"
idna = "3.7"
isort = "4.3.21"
lazy-object-proxy = "1.4.1"
mccabe = "0.6.1"
pylint = "2.3.1"
requests = "2.31.0"
six = "1.12.0"
soupsieve = "1.9.5"
typed-ast = "^1.5.5"
urllib3 = "^2.2.2"
wrapt = "1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
